--- a/Achievement_2/Exercise_2.2/src_books/sales/templates/sales/home.html
+++ b/Achievement_2/Exercise_2.2/src_books/sales/templates/sales/home.html
@@ -1,18 +1,14 @@
+{% extends "base.html" %}
 {% load static %}
 
-<!DOCTYPE html>
-<html>
-   <title>
-       Bookstore Home
-   </title>
-   <body>
-       <h1 style="text-align:center">Welcome to our Bookstore</h1>
-       <br>
-       <br>
-       <a href ="{%url 'login' %}"> Login </a>
-       <br>
-       <br>
-       <br>
-       <img src="{% static 'sales/images/bookstore.jpg' %}" alt="home" width="600" height="300">
-   </body>
-</html>
+{% block content %}
+<div class="home-hero-container">
+    <img src="{% static 'sales/images/bookstore.jpg' %}" alt="Bookstore" class="home-hero-img">
+
+    <!-- Overlay title and button -->
+    <div class="home-hero-overlay">
+        <h1 class="home-hero-title animate-title">Welcome to our Bookstore</h1>
+        <a href="{% url 'login' %}" class="btn-login">Login</a>
+    </div>
+</div>
+{% endblock %}
